--- a/iwizxp/trunk/src/Makefile.am
+++ b/iwizxp/trunk/src/Makefile.am
@@ -1,3 +1,12 @@
 bin_PROGRAMS = iwizxp
-iwizxp_SOURCES = Modem.cpp Database.cpp Log.cpp internet.cpp Isp.cpp BashSyntaxScriptLoader.cpp Utils.cpp
+iwizxp_SOURCES = Modem.cpp \
+				 Database.cpp \
+				 Log.cpp \
+				 internet.cpp \
+				 Isp.cpp \
+				 BashSyntaxScriptLoader.cpp \
+				 Utils.cpp \
+				 PsudoEthernetUsbCablesModem.cpp \
+				 SimpleFormatDialerLoader.cpp \
+				 Dialer.cpp
 iwizxp_INCLUDES = -I$(top_srcdir)/src
