Changed GlobalRepository's singleton behaviour. The problem was that the singleton instance was allocated on the stack, and released after main() finished, whcich was after Log::release(). GlobalRepository's destrcutor does some printing, which caused problem (since the Log had no instance).

--- a/iwizxp/trunk/src/Makefile.am
+++ b/iwizxp/trunk/src/Makefile.am
@@ -8,5 +8,6 @@ iwizxp_SOURCES = Modem.cpp \
 				 Utils.cpp \
 				 PsudoEthernetUsbCablesModem.cpp \
 				 SimpleFormatDialerLoader.cpp \
-				 Dialer.cpp
+				 Dialer.cpp \
+				 GlobalRepository.cpp
 iwizxp_INCLUDES = -I$(top_srcdir)/src
