We're not using Xalan for now. Xerces check stays, we're gonna need it soon.

--- a/iwizxp/trunk/configure.in
+++ b/iwizxp/trunk/configure.in
@@ -4,6 +4,6 @@ AM_PROG_LIBTOOL
 AC_PROG_CXX
 AC_PROG_INSTALL
 AC_CHECK_XERCES
-AC_CHECK_XALAN
+#AC_CHECK_XALAN
 AC_OUTPUT(Makefile \
           src/Makefile)
