Added support for ArgumentsScript. ArgumentsScript is now a singleton, since there's only one per system (TODO: Review previous statement and design).

--- a/iwizxp/trunk/src/Makefile.am
+++ b/iwizxp/trunk/src/Makefile.am
@@ -10,5 +10,6 @@ iwizxp_SOURCES = Modem.cpp \
 				 SimpleFormatDialerLoader.cpp \
 				 Dialer.cpp \
 				 GlobalRepository.cpp \
-				 ConnectionTemplate.cpp
+				 ConnectionTemplate.cpp \
+				 ArgumentsScript.cpp
 iwizxp_INCLUDES = -I$(top_srcdir)/src
