Started building XML support.
- Added some utilities to Utils.
- Added utility classes for messing around with Xerces (like Utils::xts)
- Added utility classes for messing with files (XMLReadable and XMLWriteable)
- There is a new isp load, XMLIspLoader.
- ISPs and ConnectionMethods are now XMLReadables.

--- a/iwizxp/trunk/src/Makefile.am
+++ b/iwizxp/trunk/src/Makefile.am
@@ -11,5 +11,8 @@ iwizxp_SOURCES = Modem.cpp \
 				 Dialer.cpp \
 				 GlobalRepository.cpp \
 				 ConnectionTemplate.cpp \
-				 ArgumentsScript.cpp
+				 ArgumentsScript.cpp \
+				 XMLIspLoader.cpp \
+				 xts.cpp \
+				 Cables.cpp
 iwizxp_INCLUDES = -I$(top_srcdir)/src
