- Created sub-namespace for DOM related utilities - Document normalization and ignoreable text nodes removal is done in   XMLIspLoader - Method that operates upon Element not receive Elements, not Nodes. - Removed old-farmat ISPs, XML will be used from no on.

--- a/iwizxp/trunk/src/Makefile.am
+++ b/iwizxp/trunk/src/Makefile.am
@@ -14,5 +14,6 @@ iwizxp_SOURCES = Modem.cpp \
 				 ArgumentsScript.cpp \
 				 XMLIspLoader.cpp \
 				 xts.cpp \
-				 Cables.cpp
+				 Cables.cpp \
+				 DOMUtils.cpp
 iwizxp_INCLUDES = -I$(top_srcdir)/src
