- Created the Nameable iterface, which handles named objects. - Create NamedXMLReadable object, that takes car of the name management - Modems are now XML - Removed const restricness from DOM stuff - Modem is now a concrete class, able to handle dialer choosing, exceptions and   modules. - KernelModule is now a concrete class as well, holding a map of kernel versions   and module names.

--- a/iwizxp/trunk/src/Makefile.am
+++ b/iwizxp/trunk/src/Makefile.am
@@ -6,7 +6,6 @@ iwizxp_SOURCES = Modem.cpp \
 				 Isp.cpp \
 				 BashSyntaxScriptLoader.cpp \
 				 Utils.cpp \
-				 PsudoEthernetUsbCablesModem.cpp \
 				 SimpleFormatDialerLoader.cpp \
 				 Dialer.cpp \
 				 GlobalRepository.cpp \
@@ -15,5 +14,8 @@ iwizxp_SOURCES = Modem.cpp \
 				 XMLIspLoader.cpp \
 				 xts.cpp \
 				 Cables.cpp \
-				 DOMUtils.cpp
+				 DOMUtils.cpp \
+				 XMLModemLoader.cpp \
+				 NamedXMLReadable.cpp \
+				 KernelModule.cpp
 iwizxp_INCLUDES = -I$(top_srcdir)/src
