Refactored stuff out and seperated UI from core. Wizard now takes care of the logics, while the WizardListener interacts with the user.

--- a/iwizxp/trunk/src/Makefile.am
+++ b/iwizxp/trunk/src/Makefile.am
@@ -17,5 +17,7 @@ iwizxp_SOURCES = Modem.cpp \
 				 DOMUtils.cpp \
 				 XMLModemLoader.cpp \
 				 NamedXMLReadable.cpp \
-				 KernelModule.cpp
+				 KernelModule.cpp \
+				 Wizard.cpp \
+				 TextUI.cpp
 iwizxp_INCLUDES = -I$(top_srcdir)/src
