Decoupled XML from ConnectionMethod and refactor-renamed Cables to XMLCables

--- a/iwizxp/trunk/src/Makefile.am
+++ b/iwizxp/trunk/src/Makefile.am
@@ -13,7 +13,7 @@ iwizxp_SOURCES = Modem.cpp \
 				 ArgumentsScript.cpp \
 				 XMLIspLoader.cpp \
 				 xts.cpp \
-				 Cables.cpp \
+				 XMLCables.cpp \
 				 DOMUtils.cpp \
 				 XMLModemLoader.cpp \
 				 NamedXMLReadable.cpp \
