- Fixed Excpetion once and for all (?) - Connection templates are now loaded in the   "regular" way (via XML loader).

--- a/iwizxp/trunk/src/Makefile.am
+++ b/iwizxp/trunk/src/Makefile.am
@@ -23,5 +23,7 @@ iwizxp_SOURCES = Modem.cpp \
 				 XMLIsp.cpp \
 				 XMLModem.cpp \
 				 XMLKernelModule.cpp \
-				 XMLConnectionMethodFactory.cpp
+				 XMLConnectionMethodFactory.cpp \
+				 XMLConnectionTemplate.cpp \
+				 XMLConnectionTemplateLoader.cpp
 iwizxp_INCLUDES = -I$(top_srcdir)/src
