Added some more tests

--- a/iwizxp/trunk/configure.in
+++ b/iwizxp/trunk/configure.in
@@ -1,9 +1,18 @@
 AC_INIT
 AM_INIT_AUTOMAKE(iwiz-xp,0.1)
+
+AC_LANG(C++)
+
 AM_PROG_LIBTOOL
 AC_PROG_CXX
 AC_PROG_INSTALL
+
+AC_FUNC_CLOSEDIR_VOID
+AC_FUNC_STRFTIME
+AC_CHECK_FUNCS([regcomp strerror])
+
 AC_CHECK_XERCES
 #AC_CHECK_XALAN
+
 AC_OUTPUT(Makefile \
           src/Makefile)
